--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@twa-dev/sdk": "^7.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-unity-webgl": "^9.5.2"
   },
   "devDependencies": {
+    "@types/node": "^22.7.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
