--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Telegram-Mini-App",
+  "name": "Subway-Runner-Krystal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
