--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "Subway-Runner-Krystal",
+  "name": "Subway-Runner-Kystal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "tsc -b && vite build",
+  "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+  "preview": "vite preview --host 0.0.0.0 --port $PORT"
+}
+,
   "dependencies": {
     "@twa-dev/sdk": "^7.10.1",
     "react": "^18.3.1",
