--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Telegram-Mini-App",
+  "name": "Subway-Runner-Krystal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,7 +16,6 @@
     "react-unity-webgl": "^9.5.2"
   },
   "devDependencies": {
-    "@types/node": "^22.7.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
